# uri

./: CMakeLists.txt  README.md
example/: CMakeLists.txt  main.c
include/uri/: defines.h  element.h  uri++.h  uri.h
src/: CMakeLists.txt  element.c  uri-parser.c  uri.c  uri.cpp  uri.leg
